--- a/Faces.Web/Faces.WebMvc/Views/OrderManagement/Details.cshtml
+++ b/Faces.Web/Faces.WebMvc/Views/OrderManagement/Details.cshtml
@@ -8,7 +8,7 @@ Order Id: @Model.Id
 User Email: @Model.UserEmail
 Picture:
 <img src="@Model.ImageString" height="100" width="100">
-Order Status: @Model.StatusString
+Order Status: @Model.Status
 <table class="table">
     <thead>
         <tr>
