--- a/Faces.Web/Faces.WebMvc/Views/OrderManagement/Index.cshtml
+++ b/Faces.Web/Faces.WebMvc/Views/OrderManagement/Index.cshtml
@@ -23,7 +23,7 @@
                 <td>@order.Id</td>
                 <td>@order.UserEmail</td>
                 <td><img src="@order.ImageString" width="50" height="50"></td>
-                <td>@order.StatusString</td>
+                <td>@order.Status</td>
             </tr>
         }
     </tbody>
