--- a/Faces.Web/Faces.WebMvc/Views/OrderManagement/Index.cshtml
+++ b/Faces.Web/Faces.WebMvc/Views/OrderManagement/Index.cshtml
@@ -1,10 +1,9 @@
 ﻿@model List<Faces.WebMvc.ViewModels.OrderViewModel>
-
 @{
+
     ViewData["Title"] = "Orders List";
 }
-
-<h3> Orders Management List </h3>
+<h3>Orders Management - overview</h3>
 <table class="table">
     <thead>
         <tr>
@@ -17,14 +16,51 @@
     <tbody>
         @foreach (var order in Model)
         {
-            <tr class="clickable" onclick="location.href='@Url.Action("Details", "OrderManagement",
-                                                      new { orderId = order.Id })'">
-
+            <tr class="clickable" onclick="location.href='@(Url.Action("Details","OrderManagement",
+                                                          new { orderId =order.Id }))'">
                 <td>@order.Id</td>
                 <td>@order.UserEmail</td>
-                <td><img src="@order.ImageString" width="50" height="50"></td>
+                <td><img src="@order.ImageString" width="50" height="50" /></td>
                 <td>@order.Status</td>
+
+
             </tr>
         }
     </tbody>
+
+
 </table>
+@section Scripts{
+    <script src="~/lib/signalr/dist/browser/signalr.js"></script>
+    <script type="text/javascript">
+
+        var timerId;
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl('http://localhost:6002/orderhub')
+            .configureLogging(signalR.LogLevel.Debug)
+            .withAutomaticReconnect()
+            .build();
+
+        connection.on('UpdateOrders', (message, orderId) => {
+
+            const encodedMsg = message + ":" + orderId;
+            console.log(encodedMsg);
+            if (orderId && orderId.length) {
+                toastr.success(orderId + ' Updated to status' + message);
+                refreshPage();
+            }
+        });
+
+        function refreshPage() {
+            clearTimeout(timerId);
+            timerId = setTimeout(function () {
+                window.location.reload();
+            }, 1000)
+        };
+
+        connection.start().catch(err => console.error(err.toString()));
+
+    </script>
+
+
+}
