--- a/Faces.Web/Faces.WebMvc/Views/Home/RegisterOrderResult.cshtml
+++ b/Faces.Web/Faces.WebMvc/Views/Home/RegisterOrderResult.cshtml
@@ -1,2 +1,2 @@
-﻿<h2>Thank you for ordering. You will be notified as the processing of the order progresses.</h2>
-<h2>Your OrderId: @ViewData["OrderId"]</h2>
+﻿<h2>Thank you formaction your order. You will be notified as the processing of the order progresses.</h2>
+<h2> Your OrderId: @ViewData["OrderId"] </h2>
