--- a/Faces.Web/Faces.WebMvc/Views/OrderManagement/Details.cshtml
+++ b/Faces.Web/Faces.WebMvc/Views/OrderManagement/Details.cshtml
@@ -1,28 +1,33 @@
 ﻿@model Faces.WebMvc.ViewModels.OrderViewModel
+
 @{
     ViewData["Title"] = "Order Details";
 }
 
-<h3> Order Details </h3>
+<h3 id="PageTitle">Order Details</h3>
+
 Order Id: @Model.Id
 User Email: @Model.UserEmail
 Picture:
-<img src="@Model.ImageString" height="100" width="100">
+<img src="@Model.ImageString" width="50" heght="50" />
 Order Status: @Model.Status
+
 <table class="table">
     <thead>
         <tr>
-            <th>OrderDetailId</th>
+            <th> OrderDetailId</th>
             <th>Image</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var orderDetail in Model.OrderDetails)
+        @foreach (var detail in Model.OrderDetails)
         {
             <tr>
-                <td>@orderDetail.Id</td>
-                <td><img src="@orderDetail.ImageString" width="40" height="40" /></td>
+                <td>@detail.Id</td>
+                <td><img src="@detail.ImageString" width="30" height="30" /></td>
             </tr>
         }
+
     </tbody>
+
 </table>
